--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img src="img/img_2.png" width="800" height="400" >
     <br />
     
-    <button onclick="window.location.href='https://w3docs.com';">
+    <button onclick="window.location.href='learn.ce.html';">
         Click Here
       </button>
       <button onclick="window.location.href='https://w3docs.com';">
