--- a/test.html
+++ b/test.html
@@ -13,9 +13,12 @@
     <button id="showImageBtn">แสดงรูป</button>
     
     <div id="imageContainer" style="display:none;">
-        <img src="https://raw.githubusercontent.com/NATTO-DPU/DPU_CE341_Team_HTML/main/3bd36bae8918891d8b7ac840a8d81c29.gif"alt="Your Image">
+        <img src="https://raw.githubusercontent.com/NATTO-DPU/DPU_CE341_Team_HTML/main/img/S__54976624.jpg"alt="Your Image">
     </div>
     <button id="showIPBtn">แสดง IP</button>
+
+    <button id="ฺBackWeb">Back</button>
+
     <script src="script.js">
 </script>
 </body>
