--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
 
     
-    <h1>Team : HTML 99999999999999</h1>
+    <h1>Team : HTML</h1>
 
     <br />
     <img src="img/img_2.png" width="800" height="400" >
