--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
     </div>
     <button id="showIPBtn">แสดง IP</button>
 
-    <button id="ฺBackWeb">Back</button>
+    <button id="ฺBackWeb">Backs</button>
 
     <script src="script.js">
 </script>
