--- a/test.html
+++ b/test.html
@@ -17,8 +17,8 @@
     </div>
     <button id="showIPBtn">แสดง IP</button>
 
-    <button id="ฺBackWeb">Backs</button>
-
+    <button onclick="window.location.href='index.html';"> 
+        Back
     <script src="script.js">
 </script>
 </body>
