--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
     </div>
     <button id="showIPBtn">แสดง IP</button>
 
-    <button onclick="window.location.href='index.html';"> 
+    <button id="BackWeb" onclick="window.location.href='index.html';"> 
         Back
     <script src="script.js">
 </script>
