--- a/Team.html
+++ b/Team.html
@@ -27,4 +27,4 @@
 
 </html>
 
-<button class="btn" onclick="window.location.href='https://tawantawan1997.medium.com/';"> Back</button>
+<button class="btn" onclick="window.location.href='index.html';"> Back</button>
