--- a/test.html
+++ b/test.html
@@ -19,6 +19,7 @@
 
     <button id="BackWeb" onclick="window.location.href='index.html';"> 
         Back
+    </button>
         
     <script src="script.js">
 </script>
